[gd_scene load_steps=8 format=3 uid="uid://bipxaaee8265p"]

[ext_resource type="Script" path="res://scripts/Button States/boulder_button.gd" id="1_72bt7"]
[ext_resource type="Texture2D" uid="uid://brif5ue7cobyd" path="res://PNGs/Boulder Button/Boulder Button-5.png.png" id="1_x52wl"]
[ext_resource type="Texture2D" uid="uid://pbpljevwqqpd" path="res://PNGs/Boulder Button/Boulder Button-1.png.png" id="2_xk3mn"]
[ext_resource type="Texture2D" uid="uid://gyuf06nt2uy1" path="res://PNGs/Boulder Button/Boulder Button-2.png.png" id="3_c5epu"]
[ext_resource type="Texture2D" uid="uid://b6i7ttfqo8ipb" path="res://PNGs/Boulder Button/Boulder Button-3.png.png" id="4_4mr58"]
[ext_resource type="Texture2D" uid="uid://cayjqlgdr1kxx" path="res://PNGs/Boulder Button/Boulder Button-4.png.png" id="5_en5kj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_222b0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_x52wl")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xk3mn")
}],
"loop": true,
"name": &"inactive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xk3mn")
}, {
"duration": 1.0,
"texture": ExtResource("3_c5epu")
}, {
"duration": 1.0,
"texture": ExtResource("4_4mr58")
}, {
"duration": 1.0,
"texture": ExtResource("5_en5kj")
}],
"loop": true,
"name": &"press",
"speed": 5.0
}]

[node name="BoulderButton" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 32
collision_mask = 3
script = ExtResource("1_72bt7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_222b0")
animation = &"inactive"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(48, 5.5, -48, 5.5, -36.6667, -7.33333, 0, -6, 36.6667, -7.33333)

[node name="BoulderDetector" type="RayCast2D" parent="."]
position = Vector2(-36.6667, -7.33333)
target_position = Vector2(73.3333, 0)
collision_mask = 16

[node name="DetectCollisionTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="DetectCollisionTimer" to="." method="_on_detect_collision_timer_timeout"]
